--- a/src/crates/schemas/Cargo.toml
+++ b/src/crates/schemas/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
 name = "schemas"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
+
+[lib]
+name = "schemas"
+path = "src/schemas.rs"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_path_to_error = "0.1"
 serde_repr = "0.1"
+serde_with = "3.12.0"
