--- a/src/crates/schemas/Cargo.toml
+++ b/src/crates/schemas/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0"
 serde_path_to_error = "0.1"
 serde_repr = "0.1"
 serde_with = "3.12.0"
+strum = { version = "0.26", features = ["derive"] }
