--- a/src/crates/gui/Cargo.toml
+++ b/src/crates/gui/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 dioxus = { version = "0.6.0", features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_path_to_error = "0.1"
 schemas.workspace = true
 
 [features]
