--- a/src/crates/schemas/Cargo.toml
+++ b/src/crates/schemas/Cargo.toml
@@ -14,3 +14,4 @@ serde_path_to_error = "0.1"
 serde_repr = "0.1"
 serde_with = "3.12.0"
 strum = { version = "0.26", features = ["derive"] }
+strum_macros = "0.26.4"
