--- a/src/crates/yomi_dict_db/Cargo.toml
+++ b/src/crates/yomi_dict_db/Cargo.toml
@@ -10,3 +10,4 @@ path = "src/yomi_dict_db.rs"
 [dependencies]
 rusqlite = { version = "0.33.0", features = ["bundled"] }
 zip = "2.2.2"
+schemas.workspace = true
