initial work to handle inserting to the database

--- a/src/crates/yomi_dict_db/Cargo.toml
+++ b/src/crates/yomi_dict_db/Cargo.toml
@@ -8,6 +8,7 @@ name = "yomi_dict_db"
 path = "src/yomi_dict_db.rs"
 
 [dependencies]
-rusqlite = { version = "0.33.0", features = ["bundled"] }
+chrono = "0.4.39"
+rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
 zip = "2.2.2"
 schemas.workspace = true
