--- a/src/crates/yomi_dict_db/Cargo.toml
+++ b/src/crates/yomi_dict_db/Cargo.toml
@@ -12,3 +12,6 @@ chrono = "0.4.39"
 rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
 zip = "2.2.2"
 schemas.workspace = true
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_path_to_error = "0.1"
